# asana-tui

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.github/workflows/: ci.yml
src/: app.rs  asana.rs  config.rs  main.rs  render.rs  state.rs
src/asana/: asana.rs  client.rs  mod.rs  models.rs  resource.rs
src/events/: mod.rs  network.rs  terminal.rs
src/state/: mod.rs  view.rs
src/ui/: mod.rs  render.rs  spinner.rs  status.rs
src/ui/render/: all.rs  footer.rs  log.rs  main.rs  mod.rs  shortcuts.rs  status.rs  top_list.rs  welcome.rs
src/ui/widgets/: color.rs  mod.rs  spinner.rs  styling.rs
