[package]
name = "asana-tui"
description = "A terminal user interface for Asana"
repository = "https://github.com/drewnorman/asana-tui"
keywords = ["asana", "tui", "cli", "terminal"]
categories = ["command-line-utilities"]
version = "0.1.0"
authors = ["Drew Norman <drew@adre.me>"]
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.47"
asana-sdk = "0.1.3"
clap = "2.33.3"
dirs = "4.0.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
serde_yaml = "0.8.21"
tokio = { version = "0.2", features = ["full"] }
